--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ logging.level.org.springframework= info
 spring.jackson.serialization.write-dates-as-timestamps=false
 #actuator beans - monitor the application
 management.endpoints.web.exposure.include=*
+#security password and username
+spring.security.user.name=root
+spring.security.user.password=root
