Create connection with in memory H2 database and create User table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,24 @@
 logging.level.org.springframework= info
 spring.jackson.serialization.write-dates-as-timestamps=false
-#actuator beans - monitor the application
+#--->actuator beans - monitor the application
 management.endpoints.web.exposure.include=*
-#security password and username
+#--->security password and username
 spring.security.user.name=root
 spring.security.user.password=root
+#--->H2 database SETUP
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:productdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=root
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+server.error.include-message=always
+spring.jpa.defer-datasource-initialization=true
+
+
+
+
+
